fixed issue with firebase authentication, fixed issued with input text not showing up, and completed a successful signup

--- a/src/screens/SignupScreen.css
+++ b/src/screens/SignupScreen.css
@@ -17,7 +17,6 @@
     padding: 10px;
     background-color: white;
     border: 1px solid #333;
-    color: white;
     border-radius: 5px;
     padding-top: 15px;
     padding-bottom: 15px;
